[metadata]
name = solana-grpc.py
version = 0.0.1
description = Solana gRPC client in python (yellowstone-grpc)
author = martimartins
author_email = martim13artins13@gmail.com
license = MIT
license_file = LICENCE

[options]
include_package_data = True
packages =
    solana_grpc
    solana_grpc.generated
install_requires =
    grpcio
    grpcio-tools

[options.package_data]
solana_grpc.generated =
    *.pyi

